<resources>
    <string name="app_name">Ledger</string>
    <string name="error_phone_number">手机号不正确</string>
    <string name="password_not_full_six">密码不能少于3位</string>
    <string name="success_register">注册成功</string>
    <string name="success_fail">注册失败</string>
    <string name="success_login">登录成功</string>
    <string name="fail_login">登录失败</string>
    <string name="fail_login_in">登入失败</string>
    <string name="note_exit">再按一次后退键退出程序</string>
    <string name="sure_delete">确定删除吗？</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="tips">提示</string>
    <string name="fail_delete">删除失败</string>
    <string name="success_delete">删除成功</string>
    <string name="cash">金额</string>
    <string name="date">日期</string>
    <string name="phone">手机号</string>
    <string name="save">保存</string>
    <string name="edit">编辑</string>
    <string name="success_update">修改成功</string>
    <string name="fail_update">修改失败</string>
    <string name="not_format_to_date">日期格式不正确</string>
    <string name="not_phone_number">手机号码格式不正确</string>
    <string name="money">¥</string>

    <string name="expend">本月花费&#160;&#160;&#160;&#160;</string>
    <string name="average">人均&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="total_cash">本月总额&#160;&#160;&#160;&#160;</string>
    <string name="income">收入</string>
    <string name="pay">支出</string>
    <string name="error_user_name">用户名不正确</string>
    <string name="user_name">用户名</string>

</resources>
