<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="260dp"
        android:layout_height="180dp"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_edx_dialog"
        android:gravity="center">

        <RelativeLayout
            android:id="@+id/rlTltle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/tips"
                android:textColor="@color/black_text"
                android:textSize="16sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_tips_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sure_delete"
            android:textColor="@color/black_text"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/bottomlayout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_cancel_dialog"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_bottom_l_dialog"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/btn_text_color_selector"
                android:textSize="16sp" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <TextView
                android:id="@+id/btn_ok_dialog"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_bottom_r_dialog"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/btn_text_color_selector"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_above="@id/bottomlayout"
            android:layout_marginTop="135dp"
            android:background="#EEEEEE" />
    </RelativeLayout>
</RelativeLayout>