<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ly_list_item_home"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_list_item"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_name_calcul"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/gray_text"
                tools:text="杨长杰" />

            <TextView
                android:id="@+id/tv_phone_calcul"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:visibility="gone"
                android:textColor="@color/gray_text"
                tools:text="17710580646" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_total_calcul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorAccent"
            tools:text="@string/total_cash" />

        <TextView
            android:id="@+id/tv_average_calcul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorAccent"
            tools:text="@string/average" />


        <TextView
            android:id="@+id/t_expend_calcul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxHeight="80dp"
            android:maxLength="20"
            android:maxLines="1"
            android:textColor="@color/colorAccent"
            tools:text="@string/expend" />

    </LinearLayout>

    <TextView
        android:id="@+id/t_value_calcul"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:ellipsize="end"
        android:gravity="center"
        android:maxHeight="80dp"
        android:maxLength="20"
        android:maxLines="1"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        tools:text="收入 200¥" />
</LinearLayout>